--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- Chaport widget code -->
   <script type="text/javascript">
     (function(w,d,v3){
-      w.chaportConfig = { appId : 'YOUR-CHAPORT-APP-ID' };
+      w.chaportConfig = { appId : '68a75428a289c621268d3f54' };
       if(w.chaport)return;v3=w.chaport={};
       v3._q=[];v3._l={};v3.q=function(){v3._q.push(arguments)};
       var s=d.createElement('script');s.type='text/javascript';s.async=true;
